fixed animations and no scrollbars

--- a/src/app/tiles/tiles.component.scss
+++ b/src/app/tiles/tiles.component.scss
@@ -4,7 +4,6 @@ $third:(1/3) * 100%;
   position: relative;
   width: 100%;
   height: inherit;
-  transition:all 0.5s ease;
   .tile{
     height:$third;
     width:$third;
