--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,5 +21,5 @@ html{
 body{
   height:100%;
   width:100vw;
-  //position:fixed;
+  overflow: hidden;
 }
